--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
-version: '3.9'
+version: '3.12'
 
 services:
   web:
+    container_name: stock-exchange-dashboard
     build: .
     ports:
       - "8000:8000"
