--- a/requirements.txt
+++ b/requirements.txt
@@ -52,6 +52,7 @@ nest-asyncio==1.6.0
 numpy==2.2.6
 orjson==3.10.18
 packaging==25.0
+pandas==2.2.3
 plotly==6.1.0
 prompt_toolkit==3.0.51
 propcache==0.3.1
